fix text overlapping buttons

--- a/source/css/scss/app/loancards.scss
+++ b/source/css/scss/app/loancards.scss
@@ -365,6 +365,7 @@ $list-loan-card-buttons-half-width: $list-loan-card-buttons-width / 2;
 			position: absolute;
 			width: 100%;
 			bottom: 0;
+			z-index: 1;
 		}
 
 		@media #{$list-break-point} {
